# fancyflags

./: CHANGELOG.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
fancyflags/: __init__.py  _argument_parsers.py  _argument_parsers_test.py  _auto.py  _auto_test.py  _define_auto.py  _define_auto_test.py  _definitions.py  _definitions_test.py  _flag_overrider.py  _flag_overrider_test.py  _flags.py  _flags_test.py  _flagsaver_test.py  _metadata.py
fancyflags/examples/: example_module.py  override_test.py
