[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fancyflags"
dynamic = ["version"]
description = "A Python library for defining structured command-line flags."
authors = [
  { name = "Google DeepMind" },
]
license = { text = "Apache License, Version 2.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["absl-py>=2.3.0"]

[dependency-groups]
test = ["absl-py==2.3.1", "pytest==8.4.1"]

[tool.setuptools.dynamic]
version = {attr = "fancyflags._metadata.__version__"}

[tool.setuptools]
packages = ["fancyflags"]

[project.urls]
Homepage = "https://github.com/google-deepmind/fancyflags"
